--- a/package.json
+++ b/package.json
@@ -19,10 +19,18 @@
   },
   "homepage": "https://github.com/marshdugan/Season-All#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.21.5",
+    "uuid": "^7.0.2"
   }
 }
