--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "fs": "0.0.1-security",
+    "init": "^0.1.2",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
