--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Season-All",
   "version": "1.0.0",
-  "description": "",
+  "description": "[![GitHub license](https://img.shields.io/badge/license-MIT-blue)](https://github.com/marshdugan)",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
